--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
     <title>Odin Recipes</title>
+
+<h1>Recipes</h1>
+
+<ol>
+<li>
+    <a href = "recipes/lasagna.html">Lasagna</a> 
+</li>
+
+</ol>
 </head>
 <body>
     
