--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <ul>
 <li>
-    <a href = "recipes/lasagna.html">Lasagna</a> 
+    <a href = "./recipes/lasagna.html">Lasagna</a> 
 </li>
 
 </ul>
